# Sunbay-officalsite

./: .env.example  .gitignore  API.md  CLI_GUIDE.md  README.md  env.env  pyproject.toml  render.yaml
static/: index.html
sunbay_official/: config.py  logger.py  main.py
sunbay_official/api/: contact.py
sunbay_official/cli/: __init__.py  get_unionid.py  init_config.py  main.py  parse_notable.py
sunbay_official/dingtalk/: __init__.py  base.py  exceptions.py  sheet.py
sunbay_official/models/: contact.py
sunbay_official/services/: contact_service.py
