[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sunbay-official"
version = "0.1.0"
description = "Sunbay官网系统（含钉钉智能表格集成）"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "alibabacloud_dingtalk>=2.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
sunbay-server = "sunbay_official.main:run"
sunbay-cli = "sunbay_official.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sunbay_official*"]
exclude = ["tests*", "static*", "python*"]
